--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,15 @@ reqwest = { version = "0.11", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1", features = ["full"] }
+
+
+[[bin]]
+name = "mini_boltz_swap"
+path = "src/main.rs"
+
+[workspace]
+members = [
+    "swap",
+    "ui",
+    "main"
+]
